# rplidar_driver

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: general.yml  rustdoc.yml
examples/: kiss_demo.rs  ultra_simple.rs
examples/kiss_demo/: Cargo.toml
examples/kiss_demo/src/: main.rs
examples/ultra_simple/: Cargo.toml
examples/ultra_simple/src/: main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.Sync.js  (+2 more)
rplidar_driver/: all.html  enum.Health.html  enum.RposError.html  index.html  sidebar-items.js  struct.Error.html  struct.RplidarDevice.html  struct.RplidarHostProtocol.html  struct.RplidarResponseDeviceInfo.html  struct.ScanMode.html  struct.ScanOptions.html  struct.ScanPoint.html  trait.RplidarDriver.html  type.Result.html
rplidar_driver/answers/: struct.RplidarResponseDeviceInfo.html
rplidar_driver/errors/: struct.Error.html
rplidar_driver/prelude/: enum.Health.html  struct.ScanMode.html  struct.ScanOptions.html  struct.ScanPoint.html
rplidar_driver/protocol/: struct.RplidarHostProtocol.html
rplidar_driver/rpos_drv/: derive.Fail.html  enum.RposError.html  index.html  sidebar-items.js  struct.Channel.html  struct.Error.html  struct.Message.html  struct.RingByteBuffer.html  trait.Fail.html  trait.ProtocolDecoder.html  trait.ProtocolEncoder.html  type.Result.html
rplidar_driver/utils/: fn.sort_scan.html  index.html  sidebar-items.js
rpos_drv/: Cargo.toml
rpos_drv/src/: channel.rs  errors.rs  lib.rs  prelude.rs  ring_byte_buffer.rs
src/: answers.rs  capsuled_parser.rs  checksum.rs  cmds.rs  errors.rs  internals.rs  lib.rs  prelude.rs  protocol.rs  ultra_capsuled_parser.rs  utils.rs
src/rplidar_driver/: answers.rs.html  capsuled_parser.rs.html  checksum.rs.html  cmds.rs.html  errors.rs.html  internals.rs.html  lib.rs.html  prelude.rs.html  protocol.rs.html  ultra_capsuled_parser.rs.html  utils.rs.html
src/rpos_drv/: channel.rs  errors.rs  mod.rs  prelude.rs  ring_byte_buffer.rs
(+25 files in other folders)
