[package]
name = "rplidar_drv"
description = "Driver for Slamtec RPLIDAR series laser sensors"
version = "0.6.0"
license = "BSD-2-Clause"
repository = "https://github.com/cnwzhjs/rplidar.rs"
keywords = ["Slamtec", "Rplidar", "Driver"]
authors = ["Tony Huang <tony@slamtec.com>"]
edition = "2018"
documentation = "https://docs.rs/rplidar_drv"
exclude = [".gitignored", ".travis.yml", ".cargo/config"]

[badges]
travis-ci = { repository = "cnwzhjs/rplidar.rs", branch = "master" }

[lib]
name = "rplidar_drv"
path = "src/lib.rs"

[dependencies]
rpos_drv = { path = "rpos_drv", version = "0.2.0" }
byteorder = "1.2.7"
crc = "1.8.1"
serialport = { version = "4.0", default-features = false }


[workspace]
members = [
    ".",
    "rpos_drv",
]

[dev-dependencies]
hex-slice = "0.1.4"
kiss3d = "0.31"
nalgebra = "0.27"
serialport = { version = "4.0", default-features = false }
plotters = "0.3.1"
