[package]
name = "rplidar_driver"
description = "Driver for Slamtec RPLIDAR A1 lidar"
version = "0.1.0"
license = "BSD-2-Clause"
repository = "https://github.com/dmweis/rplidar_driver"
keywords = ["Slamtec", "Rplidar", "Driver"]
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2018"

[lib]
name = "rplidar_driver"
path = "src/lib.rs"

[dependencies]
failure = "0.1.5"
byteorder = "1.2.7"
crc = "1.8.1"
serialport = { version = "4.0", default-features = false }

[dev-dependencies]
hex-slice = "0.1.4"
kiss3d = "0.31"
nalgebra = "0.27"
serialport = { version = "4.0", default-features = false }
plotters = "0.3.1"
